--- a/PR_130_2016/PredmetniZadatak1/View/ImageView.xaml
+++ b/PR_130_2016/PredmetniZadatak1/View/ImageView.xaml
@@ -94,12 +94,12 @@
         </Style>
     </Window.Resources>
     <Grid Background="#ffe6e6">
-        <Button x:Name="buttonChoose" Content="Choose Image" Margin="100,80,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="300" Height="40" Style="{StaticResource InitialLookButton}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" FontSize="16" FontFamily="Global serif" Click="buttonChoose_Click" />
-        <Label Content="Width:" HorizontalAlignment="Left" Height="40" Margin="100,170,0,0" VerticalAlignment="Top" Width="100" VerticalContentAlignment="Center" FontSize="16" FontFamily="Global serif" />
-        <Label Content="Height:" HorizontalAlignment="Left" Height="40" Margin="100,220,0,0" VerticalAlignment="Top" Width="100" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif"  />
-        <TextBox x:Name="textBoxWidth" HorizontalAlignment="Left" Margin="200,170,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Style="{StaticResource TextboxStyle}" />
-        <TextBox x:Name="textBoxHeight" HorizontalAlignment="Left" Margin="200,220,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Style="{StaticResource TextboxStyle}"/>
-        <Button x:Name="buttonDraw" Content="Draw" Margin="200,300,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="40" Style="{StaticResource InitialLookButton}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" FontSize="16" FontFamily="Global serif" Click="buttonDraw_Click"/>
-        <Image Name="imgImage" HorizontalAlignment="Left" Height="100" Margin="287,230,0,0" VerticalAlignment="Top" Width="150"/>
+        <Button x:Name="buttonChoose" Content="Choose Image" Margin="150,50,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="40" Style="{StaticResource InitialLookButton}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" FontSize="16" FontFamily="Global serif" Click="buttonChoose_Click" />
+        <Label Content="Width:" HorizontalAlignment="Left" Height="40" Margin="70,240,0,0" VerticalAlignment="Top" Width="80" VerticalContentAlignment="Center" FontSize="16" FontFamily="Global serif" />
+        <Label Content="Height:" HorizontalAlignment="Left" Height="40" Margin="70,290,0,0" VerticalAlignment="Top" Width="80" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif"  />
+        <TextBox x:Name="textBoxWidth" HorizontalAlignment="Left" Margin="150,240,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Style="{StaticResource TextboxStyle}" MouseEnter="MouseEnterTextBox"/>
+        <TextBox x:Name="textBoxHeight" HorizontalAlignment="Left" Margin="150,290,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Style="{StaticResource TextboxStyle}" MouseEnter="MouseEnterTextBox"/>
+        <Button x:Name="buttonDraw" Content="Draw" Margin="150,370,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="40" Style="{StaticResource InitialLookButton}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" FontSize="16" FontFamily="Global serif" Click="buttonDraw_Click"/>
+        <Image Name="imgImage" HorizontalAlignment="Left" Height="130" Margin="150,100,0,0" VerticalAlignment="Top" Width="200"/>
     </Grid>
 </Window>
