Done clear button

--- a/PR_130_2016/PredmetniZadatak1/MainWindow.xaml
+++ b/PR_130_2016/PredmetniZadatak1/MainWindow.xaml
@@ -128,7 +128,7 @@
             <TextBlock TextWrapping="Wrap" FontSize="50" Text=" "/>
             <Button Name="buttonRedo" Content="Redo"  Width="103" FontSize="16" FontFamily="Global serif" Style="{StaticResource InitialLook2Button}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" Click="buttonRedo_Click"/>
             <TextBlock TextWrapping="Wrap" FontSize="50" Text=" "/>
-            <Button Name="buttonClear" Content="Clear"  Width="103" FontSize="16" FontFamily="Global serif" Style="{StaticResource InitialLook2Button}" MouseEnter="MouseEnter" MouseLeave="MouseLeave"/>
+            <Button Name="buttonClear" Content="Clear"  Width="103" FontSize="16" FontFamily="Global serif" Style="{StaticResource InitialLook2Button}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" Click="buttonClear_Click"/>
         </StackPanel>
     </Grid>
 </Window>
