--- a/PR_130_2016/PredmetniZadatak1/View/EllipseAndRectangleView.xaml
+++ b/PR_130_2016/PredmetniZadatak1/View/EllipseAndRectangleView.xaml
@@ -432,11 +432,11 @@
         <!-- Amin -->
     </Window.Resources>
     <Grid Background="#ffe6e6">
-        <Label Content="Width" HorizontalAlignment="Left" Height="40" Margin="80,50,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center" FontSize="16" FontFamily="Global serif" />
-        <Label Content="Height" HorizontalAlignment="Left" Height="40" Margin="80,100,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif"  />
-        <Label Content="FillColor" HorizontalAlignment="Left" Height="40" Margin="80,150,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif" />
-        <Label Content="BorderColor" HorizontalAlignment="Left" Height="40" Margin="80,200,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif" />
-        <Label Content="StrokeThickness" HorizontalAlignment="Left" Height="40" Margin="80,250,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center" FontSize="16" FontFamily="Global serif" />
+        <Label Content="Width:" HorizontalAlignment="Left" Height="40" Margin="80,50,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center" FontSize="16" FontFamily="Global serif" />
+        <Label Content="Height:" HorizontalAlignment="Left" Height="40" Margin="80,100,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif"  />
+        <Label Content="FillColor:" HorizontalAlignment="Left" Height="40" Margin="80,150,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif" />
+        <Label Content="BorderColor:" HorizontalAlignment="Left" Height="40" Margin="80,200,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif" />
+        <Label Content="StrokeThickness:" HorizontalAlignment="Left" Height="40" Margin="80,250,0,0" VerticalAlignment="Top" Width="140" VerticalContentAlignment="Center" FontSize="16" FontFamily="Global serif" />
         <TextBox x:Name="textBoxWidth" HorizontalAlignment="Left" Margin="200,50,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Style="{StaticResource TextboxStyle}" MouseEnter="MouseEnterTextBox" />
         <TextBox x:Name="textBoxHeight" HorizontalAlignment="Left" Margin="200,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Style="{StaticResource TextboxStyle}" MouseEnter="MouseEnterTextBox"/>
         <ComboBox x:Name="fillColor" HorizontalAlignment="Left" Height="40" Margin="200,150,0,0" VerticalAlignment="Top" Width="200" BorderBrush="LightGray" Style="{DynamicResource ComboBoxStyle2}">
