--- a/PR_130_2016/PredmetniZadatak1/View/ImageView.xaml
+++ b/PR_130_2016/PredmetniZadatak1/View/ImageView.xaml
@@ -83,6 +83,19 @@
             <Setter Property="FontSize" Value="20" />
             <Setter Property="Width" Value="200"/>
             <Setter Property="Height" Value="40"/>
+            <Setter Property="Background" Value="#ffe6e6"/>
+            <Setter Property="BorderBrush" Value="#ff6666"/>
+            <Setter Property="Border.Background" Value="#ffe6e6"/>
+            <Style.Triggers>
+                <Trigger Property="Border.IsMouseOver" Value="True">
+                    <Setter Property="Border.Background" Value="#ff8080" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <!--<Style x:Key="TextboxDrawMouseStyle" TargetType="{x:Type TextBox}">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Height" Value="40"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TextBox}">
@@ -102,10 +115,10 @@
             </Setter>
             <Style.Triggers>
                 <Trigger Property="IsKeyboardFocused" Value="True">
-                    <Setter Property="BorderBrush" Value="#ffe6e6"/>
+                    <Setter Property="Background" Value="#ffe6e6"/>
                 </Trigger>
             </Style.Triggers>
-        </Style>
+        </Style>-->
     </Window.Resources>
     <Grid Background="#ffe6e6">
         <Button x:Name="buttonChoose" Content="Choose Image" Margin="150,50,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="40" Style="{StaticResource InitialLookButton}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" FontSize="16" FontFamily="Global serif" Click="buttonChoose_Click" />
