--- a/PR_130_2016/PredmetniZadatak1/View/ImageView.xaml
+++ b/PR_130_2016/PredmetniZadatak1/View/ImageView.xaml
@@ -122,11 +122,11 @@
     </Window.Resources>
     <Grid Background="#ffe6e6">
         <Button x:Name="buttonChoose" Content="Choose Image" Margin="150,50,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="40" Style="{StaticResource InitialLookButton}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" FontSize="16" FontFamily="Global serif" Click="buttonChoose_Click" />
-        <Label Content="Width:" HorizontalAlignment="Left" Height="40" Margin="70,240,0,0" VerticalAlignment="Top" Width="80" VerticalContentAlignment="Center" FontSize="16" FontFamily="Global serif" />
-        <Label Content="Height:" HorizontalAlignment="Left" Height="40" Margin="70,290,0,0" VerticalAlignment="Top" Width="80" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif"  />
+        <Label Name="labelWidth" Content="Width:" HorizontalAlignment="Left" Height="40" Margin="70,240,0,0" VerticalAlignment="Top" Width="80" VerticalContentAlignment="Center" FontSize="16" FontFamily="Global serif" />
+        <Label Name="labelHeight" Content="Height:" HorizontalAlignment="Left" Height="40" Margin="70,290,0,0" VerticalAlignment="Top" Width="80" VerticalContentAlignment="Center"  FontSize="16" FontFamily="Global serif"  />
         <TextBox x:Name="textBoxWidth" HorizontalAlignment="Left" Margin="150,240,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Style="{StaticResource TextboxStyle}" MouseMove="MouseEnterTextBox" MouseLeave="MouseLeaveTextBox"/>
         <TextBox x:Name="textBoxHeight" HorizontalAlignment="Left" Margin="150,290,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Style="{StaticResource TextboxStyle}" MouseMove="MouseEnterTextBox" MouseLeave="MouseLeaveTextBox"/>
-        <Button x:Name="buttonDraw" Content="Draw" Margin="150,370,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="40" Style="{StaticResource InitialLookButton}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" FontSize="16" FontFamily="Global serif" Click="buttonDraw_Click"/>
+        <Button x:Name="buttonDraw" Content="Draw" Margin="150,370,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="40" Style="{StaticResource InitialLookButton}" MouseEnter="MouseEnter" MouseLeave="MouseLeave" FontSize="16" FontFamily="Global serif"/>
         <Image Name="imgImage" HorizontalAlignment="Left" Height="130" Margin="150,100,0,0" VerticalAlignment="Top" Width="200"/>
     </Grid>
 </Window>
