--- a/PR_130_2016/PredmetniZadatak1/View/EllipseAndRectangleView.xaml
+++ b/PR_130_2016/PredmetniZadatak1/View/EllipseAndRectangleView.xaml
@@ -77,6 +77,7 @@
             <Setter Property="FontSize" Value="20" />
             <Setter Property="Width" Value="200"/>
             <Setter Property="Height" Value="40"/>
+            <Setter Property="FontFamily" Value="Global serif"/>
             <Setter Property="Background" Value="#ffe6e6"/>
             <Setter Property="BorderBrush" Value="Red"/>
         </Style>
@@ -84,12 +85,13 @@
             <Setter Property="FontSize" Value="20" />
             <Setter Property="Width" Value="200"/>
             <Setter Property="Height" Value="40"/>
+            <Setter Property="FontFamily" Value="Global serif"/>
             <Setter Property="Background" Value="#ffe6e6"/>
-            <Setter Property="BorderBrush" Value="#ff6666"/>
+            <Setter Property="BorderBrush" Value="Black"/>
             <Setter Property="Border.Background" Value="#ffe6e6"/>
             <Style.Triggers>
                 <Trigger Property="Border.IsMouseOver" Value="True">
-                    <Setter Property="Border.Background" Value="#ff8080" />
+                    <Setter Property="Border.Background" Value="#ff8080"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
